--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -38,7 +38,7 @@
 .posts .post a:hover .post-meta,
 .posts .post a:hover .post-title,
 .posts .post a:hover .post-summary {
-  opacity: 0.88; font-size: $h5;
+  opacity: 0.88;
 }
 
 .site-header {
